Stop overflow on notification dropdown
Background was overflowing out from the increased border-radius. This
was a bit more tricky than for the other header dropdown because of
the scroll behaviour.

--- a/app/components/HeaderNotifications/HeaderNotifications.css
+++ b/app/components/HeaderNotifications/HeaderNotifications.css
@@ -1,9 +1,6 @@
 @import url('~app/styles/variables.css');
 
 .notifications {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 400px;
 
   @media (--small-viewport) {
@@ -16,32 +13,25 @@
   }
 }
 
+.maxHeight {
+  max-height: 400px;
+}
+
 .notification {
-  border-bottom: 1px solid var(--border-gray);
   padding: 15px 15px 0;
   display: flex;
   flex-direction: row;
   color: var(--lego-font-color);
-  line-height: 1.5;
-
-  &:last-child {
-    border-bottom: none;
-  }
-
-  &:hover {
-    background-color: var(--additive-background);
-  }
+  line-height: 1.4;
+  cursor: pointer;
 }
 
 .innerNotification {
   width: 100%;
   display: flex;
   flex-direction: row;
-  padding-right: 15px;
   word-break: break-word;
   white-space: pre-line;
-  border-bottom: 1px solid var(--border-gray);
-  padding-bottom: 15px;
 }
 
 .unRead {
